Fix nav on mobile, update table details

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,6 +49,9 @@ a {
   @apply rounded-full bg-green-500 my-4 py-2 px-4 text-white font-bold;
 }
 
+.input-width {
+  @apply w-1/2 sm:w-full;
+}
 .pill {
   border: 1px solid rgba(0, 0, 0, 0.12);
   color: rgba(0, 0, 0, 0.26);
@@ -91,7 +94,6 @@ a {
   line-height: 1em;
   margin: 0;
   position: relative;
-  width: 100%;
 }
 
 .aaForm--small {
